# graph_theory

./: .gitignore  CMakeLists.txt  README.md
extremal_graph_theory/: CMakeLists.txt  ant_colony.cpp  bitset.hpp  graph.hpp  graph_file_parser.hpp  heuristic_max_clique.cpp  heuristic_max_clique.hpp  main.cpp  parser.cpp  parser.hpp  segundo_max_clique.cpp  segundo_max_clique.hpp
extremal_graph_theory/dimacs/: brock200_1.clq  p_hat1000-2.clq  p_hat300-1.clq  sanr200_0.7.clq
extremal_graph_theory/generated_graphs/: barabasi_rand_1000_400.clq  rand_g_1000_0.1  rand_g_100_0.3  rand_g_100_0.6  rand_g_100_0.7  rand_g_100_0.8  rand_g_100_0.9  rand_g_150_0.5  rand_g_150_0.6  rand_g_150_0.8  rand_g_150_0.9  rand_g_200_0.6  rand_g_200_0.7  rand_g_200_0.9  rand_g_500_0.3
extremal_graph_theory/helpers/: map_data.py  random_generator.py  read_graph_from_csv.py
extremal_graph_theory/real_life_graphs/: facebook_news.clq  git.clq  my_friends_vk.clq  twitch_es.clq
graph_coloring/: CMakeLists.txt  algorithm.hpp  ant_colony.hpp  bitset.h  bitset.hpp  constants.hpp  file.json  graph.hpp  graph_file_parser.hpp  heuristic_max_clique.cpp  heuristic_max_clique.hpp  main.cpp  matr.col  parse_input_json.hpp  parser.cpp  parser.hpp  plot_graph.py  segundo_max_clique.cpp  segundo_max_clique.hpp
graph_coloring/dimacs/: c-fat200-1.clq  hamming6-2.clq  johnson8-2-4.clq  matr.clq  p_hat1000-1.clq  p_hat1000-3.clq  san200_0.7_1.clq
graph_coloring/files/: file.json  keller4.clq  p_hat300-1.clq
graph_coloring/generated_graphs/: barabasi_rand_10000_10.clq  barabasi_rand_1000_301.clq  barabasi_rand_1000_500.clq  barabasi_rand_1000_600.clq  barabasi_rand_1000_701.clq  barabasi_rand_100_30.clq  barabasi_rand_100_40.clq  barabasi_rand_100_50.clq  barabasi_rand_100_60.clq  barabasi_rand_100_70.clq  barabasi_rand_100_80.clq  rand_g_1000_0.2  rand_g_1000_0.4  rand_g_1000_0.5  rand_g_100_0.5  rand_g_100_0.95  rand_g_150_0.3  rand_g_150_0.7  rand_g_150_0.95  rand_g_200_0.3  rand_g_200_0.5  rand_g_200_0.8  rand_g_500_0.4  rand_g_500_0.5  rand_g_500_0.6  smallRandomGraph  sparserLargeRandomGraph  test.clq
graph_coloring/graph_generator/: build_generator.sh  graphGenerator  random_graph_generator.cpp  random_graph_generator.hpp
graph_coloring/helpers/: get_data_from_vk.py  map_data.py  mapped_file  my_friends  my_friends_new  plot_graph.py  rand_g_1000_0.3  rand_g_1000_0.3_reordered  rand_g_100_0.3  random_generator.py  read_graph_from_csv.py  rus_friends
result_times/: barabashi_gen.csv  dimacs_results.csv  other_barabashi.csv  rand_generated.csv  results.csv  results_real_graphs.csv  some_real_grahps_and_sparse.csv
(+1 files in other folders)
